# viscom_framework_core

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMake_core.cmake  CMake_core.cmake.orig  CMake_core.txt  Info.txt  LICENSE  README.md  conanfile-osx.txt  conanfile.txt  framework.cfg  framework_ide.cfg  framework_ide_local_slave.cfg
cmake/: Conan.cmake
config/: properties.xml
config/single/: properties.xml
data/: ColorCalibData.xml  ProjectorData.xml  ProjectorData2.xml  ProjectorData4.xml  VRArenaSimCenter2.xml  VRArenaSimCenter2_2.xml  double_stereo.xml  out_camera_data.xml  quad.xml  quad_windows.xml  single.xml  single_two.xml  two.xml  two_home.xml  two_nodes.xml
data/localms/: localms.xml
data/quad/: ColorCalibData.xml  single_quad.xml  single_quad_remote_master.xml  single_quad_remote_slave.xml
data/single/: ColorCalibData.xml  ProjectorData.xml  single.xml
doc/: Doxyfile.in
resources/fonts/: ReadMe.txt
resources/fonts/yahei/: yahei.json
resources/shader/: backgroundGrid.frag  calibrationRendering.frag  calibrationRendering.vert  foregroundMesh.frag  foregroundMesh.vert  foregroundTriangle.frag  foregroundTriangle.vert  fullScreenQuad.vert
resources/shader/font/: font.glsl
shader/: SimpleFragmentShader.fragmentshader  SimpleVertexShader.vertexshader  backgroundGrid.vert  blur_tex.frag  blur_tex.vert  colorCalibShader.frag  colorCalibShader.vert  displayTex.frag  displayTex.vert  foregroundTriangle.frag  passthrough.vert  simple.frag  simple.vert  simpleOgl3.frag  simpleOgl3.vert  simpleTexture.frag  ultrasimpleFragmentShader.fragmentshader  ultrasimpleVertexShader.vertexshader
src/: ColorCalib.cpp  ColorCalib.h  Master.cpp  Master.h  ProjectorOverlapFramebuffer.cpp  ProjectorOverlapFramebuffer.h  ShareUtil.cpp  ShareUtil.h  Slave.cpp  Slave.h  SocketHandler.cpp  SocketHandler.h  main.cpp  main.h
src/app/: ApplicationNodeImplementation.cpp  ApplicationNodeImplementation.h  MasterNode.cpp  MasterNode.h  SlaveNode.cpp  SlaveNode.h  Vertices.h
src/core/: ApplicationNode.cpp  ApplicationNode.h  ApplicationNodeBase.cpp  ApplicationNodeBase.h  ApplicationNodeInternal.cpp  ApplicationNodeInternal.h  CMake_core.txt  CalibrationVertices.h  CameraHelper.cpp  CameraHelper.h  InputWrapper.h  OpenCVParserHelper.cpp  OpenCVParserHelper.h  SlaveNodeHelper.h  SlaveNodeInternal.cpp  SlaveNodeInternal.h  TuioInputWrapper.cpp  TuioInputWrapper.h  config.cpp  config.h  initialize.h  main.h  open_gl_fwd.h  utils.h
src/core/app/: ApplicationNodeBase.cpp  ApplicationNodeBase.h  DisplayPointerCalibrationController.cpp  DisplayPointerCalibrationController.h  OpenVR.cpp  OpenVR.h  OpenVRController.cpp  OpenVRController.h  OpenVRControllerIfc.cpp  OpenVRControllerIfc.h  TuioInputWrapper.cpp  TuioInputWrapper.h
src/core/app_internal/: ApplicationNodeBase.h  CoordinatorNodeInternal.cpp  CoordinatorNodeInternal.h  WorkerNodeCalibratedInternal.cpp  WorkerNodeInternal.h  WorkerNodeLocalInternal.cpp
src/core/camera/: Arcball.cpp  Arcball.h  ArcballCamera.cpp  ArcballCamera.h  ArcballCameraOpenVR.cpp  ArcballCameraOpenVR.h  Camera.cpp  Camera.h  CameraBase.cpp  CameraBase.h  FreeCamera.cpp  FreeCamera.h
src/core/g3log/: filesink.cpp  filesink.h  filesinkhelper.inl
src/core/gfx/: FrameBuffer.cpp  FrameBuffer.h  FullscreenQuad.cpp  FullscreenQuad.h  GPUProgram.cpp  GPUProgram.h  Material.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
src/core/gfx/fonts/: Font.cpp  Font.h  font_info.h
src/core/gfx/mesh/: AnimMeshRenderable.cpp  AnimMeshRenderable.h  Animation.cpp  Animation.h  AnimationState.cpp  AnimationState.h  Mesh.cpp  Mesh.h  MeshRenderable.cpp  MeshRenderable.h  SceneMeshNode.cpp  SceneMeshNode.h  SubMesh.cpp  SubMesh.h  animation_convert_helpers.h  assimp_convert_helpers.h
src/core/imgui/: imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_glfw_gl3.cpp  imgui_impl_glfw_gl3.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
src/core/math/: aabb.h  math.h  primitives.h  transforms.h
src/core/resources/: FontManager.cpp  FontManager.h  GPUProgramManager.cpp  GPUProgramManager.h  MeshManager.cpp  MeshManager.h  Resource.cpp  Resource.h  ResourceManager.cpp  ResourceManager.h  TextureManager.cpp  TextureManager.h
src/core/spdlog/sinks/: filesink.cpp  filesink.h
src/core/utils/: function_view.h  serializationHelper.h  utils.h
src_noopenvr/core/app/: OpenVRController.h
src_nosgct/: README.txt
src_nosgct/core/: ApplicationNodeInternal.cpp  ApplicationNodeInternal.h  CameraHelper.cpp  CameraHelper.h  FrameworkInternal.cpp  FrameworkInternal.h  glfw.h  initialize.cpp  open_gl.h
src_nosgct/core/app_internal/: ApplicationNodeInternal.cpp  ApplicationNodeInternal.h  CoordinatorNodeInternal.h  WorkerNodeInternal.h
src_nosgct/core/old/: FrameworkInternal.cpp  FrameworkInternal.h
src_nosgct/glew/src/: glew.cc
src_openvr/core/app/: DisplayPointerCalibrationController.h  OpenVR.cpp  OpenVRController.cpp  OpenVRController.h
src_sgct/core/: ApplicationNodeInternal.cpp  ApplicationNodeInternal.h  CameraHelper.cpp  CameraHelper.h  FrameworkInternal.cpp  FrameworkInternal.h  glfw.h  initialize.cpp  open_gl_fwd.h
src_sgct/core/app_internal/: ApplicationNodeInternal.cpp  ApplicationNodeInternal.h  CoordinatorNodeInternal.cpp  CoordinatorNodeInternal.h  WorkerNodeCalibratedInternal.cpp  WorkerNodeCalibratedInternal.h  WorkerNodeLocalInternal.cpp  WorkerNodeLocalInternal.h
src_sgct/wrapper/: sgct_wrapper.cpp  sgct_wrapper.h
